fix: Add z-index to slider and footer to prevent overlap

--- a/src/drawer/styles.scss
+++ b/src/drawer/styles.scss
@@ -94,6 +94,7 @@
     inset-block-end: 0;
     inset-inline-start: 0;
     inset-inline-end: 0;
+    z-index: 810;
   }
 }
 
